@@ -348,10 +348,14 @@
     "perfect": "MY FRIEND, THOSE GUYS ARE MADE TO ANOTHER PRO",
     "banned-user": "You cannot ship this user because it is banned from Menhera!"
   },
-  "avatar": {
+  "user": {
+    "banner": {
+      "no-banner": "This user doesn't have a banner",
+      "title": "{{user}}'s Banner",
+      "footer": "What a beautiful banner yay"
+    },
     "title": "{{user}}'s avatar",
     "footer": "What a beautiful image uwuwu",
-    "unknow-user": "user not found",
     "client_title": "my avatar ({{user}})",
     "client_footer": "I'm very beautiful, right?"
   },
